best-practices-vpol/disallow-latest-tag/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
- ../disallow-latest-tag.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-latest-tag
  resources:
  - baddeployment01
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-latest-tag
  resources:
  - badpod01
  - badpod02
  - badpod-init-latest
  - badpod-ephemeral-latest
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-latest-tag
  resources:
  - gooddeployment01
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-latest-tag
  resources:
  - myapp-pod
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: disallow-latest-tag
  resources:
  - vit-baddeployment01
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: disallow-latest-tag
  resources:
  - vit-badpod01
  - vit-badpod02
  result: fail
